flex/flex-tests/testData/js2_highlighting/HighlightStaticInstanceMembers.js2
var <info descr="identifiers//global variable">globalVar</info>:int;

class <info descr="classes//class name">SampleClass</info> {
    static var <info descr="static field">staticField</info>:int;
    static function <info descr="static method">staticMethod</info>():void {}
    function <info descr="instance method">instanceMethod</info>(<info descr="identifiers//parameter">p</info>):int {}
    var <info descr="instance field">instanceField</info>:int;
}

function <info descr="identifiers//global function">testFun</info>(<info descr="identifiers//parameter">param</info>:int):void {
    <info descr="classes//class name">SampleClass</info>.<info descr="static field">staticField</info> = <info descr="identifiers//global variable">globalVar</info>
    <info descr="classes//class name">SampleClass</info>.<info descr="static method">staticMethod</info>();
    var <info descr="identifiers//local variable">a</info>:<info descr="classes//class name">SampleClass</info>;
    <info descr="identifiers//local variable">a</info>.<info descr="instance method">instanceMethod</info>(<info descr="identifiers//parameter">param</info>)
    <info descr="identifiers//local variable">a</info>.<info descr="instance field">instanceField</info> = 1
}

class <info descr="classes//class name">SomeConstants</info> {
    public static const <info descr="static field">SOME_CONST</info>:<info descr="classes//class name">String</info> = "test";
}

class <info descr="classes//class name">Foo2</info> {
    public function <info descr="instance method">f</info>():void {
        var <info descr="identifiers//local variable">aa</info>:<info descr="classes//class name">String</info> = <error>SOME_CONST</error>;
    }
}

class <lineMarker descr="Has subclasses"><info descr="classes//class name">Base</info></lineMarker> {
    var <info descr="instance field">x</info>;
    public static function  <info descr="static method">staticFunction</info>():void {}
}

class <info descr="classes//class name">Derived</info> extends <info descr="classes//class name">Base</info> {
    var <info descr="instance field">x2</info>;

    public static function  <info descr="static method">derivedStaticFunction</info>():void {
      <error descr="Instance member is not accessible"><info descr="instance field">x</info></error> = 1;
      <error descr="Instance member is not accessible"><info descr="instance field">x2</info></error> = 1;
      <info descr="classes//class name">Base</info>.<error descr="Instance member is not accessible"><info descr="instance field">x</info></error> = 1;
      <info descr="classes//class name">Derived</info>.<error descr="Instance member is not accessible"><info descr="instance field">x</info></error> = 1;
      <info descr="classes//class name">Derived</info>.<error descr="Instance member is not accessible"><info descr="instance field">x2</info></error> = 1;
    }
}

<info descr="classes//class name">Base</info>.<info descr="static method">staticFunction</info>();
<info descr="classes//class name">Derived</info>.<info descr="static method">derivedStaticFunction</info>();
<info descr="classes//class name">Derived</info>.<error descr="Static member is not accessible"><info descr="static method">staticFunction</info></error>();
